lighter version of the XYslices

--- a/plis_beamer.tex
+++ b/plis_beamer.tex
@@ -485,8 +485,8 @@ $\lambda \sim \epsilon^{1/7} \lambda^*$ and $A \sim \epsilon^{4/7} \lambda^*$
 \begin{tabu}{X[c]X[c]}
 water, $\eta=\SI{1}{\milli\pascal\second}$ &
 glycerol 60\%, $\eta=\SI{10}{\milli\pascal\second}$\\
-\includegraphics[width=0.45\textwidth]{XYslice_gly0}&
-\includegraphics[width=0.45\textwidth]{XYslice_gly60}
+\includegraphics[width=0.45\textwidth]{XYslice_gly0.jpg}&
+\includegraphics[width=0.45\textwidth]{XYslice_gly60.jpg}
 \end{tabu}
 \tikz\draw[line width=0.2em] (0,0) -- ++(0.045\textwidth,0) node[midway, below] {\SI{10}{\micro\metre}};
 \end{frame}
