ellipse of tertiary regime

--- a/creep_beamer.tex
+++ b/creep_beamer.tex
@@ -96,7 +96,7 @@ E.N.S. Lyon &  CRPP Bordeaux & E.N.S. Lyon\\
 	]
 	\fill[Accent1!20]
 		(axis cs:10,0.4) ellipse[rotate=-30, x radius=0.2\textwidth, y radius=0.12\textwidth]
-		(axis cs:2e2,1.6) ellipse[x radius=0.3\textwidth, y radius=0.05\textwidth]
+		(axis cs:2e2,1.6) ellipse[x radius=0.35\textwidth, y radius=0.05\textwidth]
 		(axis cs:3e3,0.85) ellipse[rotate=-7.5, x radius=0.3\textwidth, y radius=0.07\textwidth]
 		;
 	\node[above right] at (axis cs:1e1,0.2) {primary};
@@ -480,6 +480,7 @@ $\beta$ exponent of damage accumulation
 \begin{columns}
 \column{0.65\textwidth}
 \begin{block}{\textit{\footnotesize Halász et al., PRE 2012}}
+\tikzsetnextfilename{Halasz}
 \begin{tikzpicture}[inner sep=0, ultra thick, font=\footnotesize]
 \node (g) {\includegraphics[height=7\baselineskip]{Halasz_2012_Basquin}};
 \node[draw=green!50!black, below right=0 and \baselineskip of g.north east] (c) {\includegraphics[height=4\baselineskip]{Halasz_2012_crack}};
