Definition of biogels

--- a/seminaire_Tanakalab.tex
+++ b/seminaire_Tanakalab.tex
@@ -146,7 +146,8 @@ red!40!yellow,
 \setcounter{framenumber}{0}
 
 
-\begin{frame}{Application of biogels}
+\begin{frame}{Application of biogels \textup{\normalsize(physical gels
+$E_{bond}\gg k_B T$)}}
 \begin{tabu}{cX[c]c}
 \includegraphics[height=0.3\textheight]{cell_mech} &
 \includegraphics[height=0.3\textheight]{electrophoresis} &
