--- a/permeability_measurement.tex
+++ b/permeability_measurement.tex
@@ -74,6 +74,7 @@ In case of laminar flow it is a prerequisite for applying Darcy's law that $Re$ 
 \node[text=white,anchor=north west] at (whey.north west) {whey};
 \node at (tubel.north) {$1$};
 \node at (tuber.north) {$2$};
+\draw[->] (whey.south west) ++(45:0.075\textwidth) -- +(0,0.1\textwidth) node[above] {$x$};
 \end{tikzpicture}
 \caption{Schematic representation of permeability measurement.}
 \label{fig:tubexp}
