--- a/permeability_measurement.tex
+++ b/permeability_measurement.tex
@@ -79,7 +79,7 @@ In case of laminar flow it is a prerequisite for applying Darcy's law that $Re$ 
 \caption{Schematic representation of permeability measurement.}
 \label{fig:tubexp}
 \end{figure}
-By measuring the liquid flux, $v$, of usually whey through open glass tubes filled with casein gels, the permeability coefficient, $B$, could be calculated from the known pressure gradient, $\nabla P$, according to equation \ref{eq:Darcy}. The apparatus used was developed by Van Dijk (1982) for measurements on rennet gels. Glass tubes open at both ends with an inner diameter of \SI{3.7}{\milli\metre} and a length of \SI{25}{\centi\metre} were placed in a precooled vat. The tubes placed in a holder rested on a plexiglass base. Acidified skimmilk or sodium caseinate was added to the vat to such an extent that the tubes were filled over a length of about \SI{10}{\centi\metre}. The gelation vat was heated according to the procedure given in section 2.3 (see original thesis). After the required gelation time at the appropriate temperature the tubes were with- drawn from the gelation vat, cleaned at the outside and placed in a rack, which was placed in the measuring vat made of clear plexiglass. The level of the percolating liquid in the measuring vat (usually whey or a sodium phosphate solution) was adjusted in such a way that the initial pressure gradient was about \SIrange{4.5e3}{6.0e3}{\pascal\per\metre}. The whey level in the tubes was read at regular time intervals with the help of a travelling microscope. The length of the intervals depended on the permeability of the gel matrix. From the five readings usually made four permeability coefficients could be calculated. The order of magnitude of the flow velocity, $v$, varied from \SIrange{3e-6}{8e-8}{\metre\per\second}. Assuming a value of \SI{1e-7}{\metre} for the parameter $\delta$ (i.e. a low estimate of the approximate diameter of casein particles) in eq.~\ref{eq:Reynolds} while $\rho\simeq \SI{1e3}{\kilo\gram\per\cubic\metre}$ and $\eta \simeq \SI{1e-3}{\pascal\second}$, the Reynolds number, $Re$, for the flow through casein gels varied from \SIrange{8e-9}{3e-7}{}. Taking for $\delta$ a pore diameter of \SIrange{1e-6}{1e-5}{\metre} instead of a particle diameter of \SI{1e-7}{\metre}, $Re$ will be 10 to 100 times larger, but still sufficiently small. There was therefore no risk for turbulent flow in our experiments. Variation of the pressure gradient from \SIrange{4.0}{11.0e3}{\pascal\per\metre} did not influence the calculated permeability coefficients, so that the application of Darcy's law for flow through acid casein gels seems allowable.
+By measuring the liquid flux, $v$, of usually whey through open glass tubes filled with casein gels, the permeability coefficient, $B$, could be calculated from the known pressure gradient, $\nabla P$, according to equation \ref{eq:Darcy}. The apparatus used was developed by Van Dijk (1982) for measurements on rennet gels. Glass tubes open at both ends with an inner diameter of \SI{3.7}{\milli\metre} and a length of \SI{25}{\centi\metre} were placed in a precooled vat. The tubes placed in a holder rested on a plexiglass base. Acidified skimmilk or sodium caseinate was added to the vat to such an extent that the tubes were filled over a length of about \SI{10}{\centi\metre}. The gelation vat was heated according to the procedure given in section~2.3\footnote{see original thesis}. After the required gelation time at the appropriate temperature the tubes were withdrawn from the gelation vat, cleaned at the outside and placed in a rack, which was placed in the measuring vat made of clear plexiglass. The level of the percolating liquid in the measuring vat (usually whey or a sodium phosphate solution) was adjusted in such a way that the initial pressure gradient was about \SIrange{4.5e3}{6.0e3}{\pascal\per\metre}. The whey level in the tubes was read at regular time intervals with the help of a travelling microscope. The length of the intervals depended on the permeability of the gel matrix. From the five readings usually made four permeability coefficients could be calculated. The order of magnitude of the flow velocity, $v$, varied from \SIrange{3e-6}{8e-8}{\metre\per\second}. Assuming a value of \SI{1e-7}{\metre} for the parameter $\delta$ (i.e. a low estimate of the approximate diameter of casein particles) in eq.~\ref{eq:Reynolds} while $\rho\simeq \SI{1e3}{\kilo\gram\per\cubic\metre}$ and $\eta \simeq \SI{1e-3}{\pascal\second}$, the Reynolds number, $Re$, for the flow through casein gels varied from \SIrange{8e-9}{3e-7}{}. Taking for $\delta$ a pore diameter of \SIrange{1e-6}{1e-5}{\metre} instead of a particle diameter of \SI{1e-7}{\metre}, $Re$ will be 10 to 100 times larger, but still sufficiently small. There was therefore no risk for turbulent flow in our experiments. Variation of the pressure gradient from \SIrange{4.0}{11.0e3}{\pascal\per\metre} did not influence the calculated permeability coefficients, so that the application of Darcy's law for flow through acid casein gels seems allowable.
 
 The calculation of $B$ from the experimental readings is somewhat complicated, because the pressure gradient is changing with time as the whey level in the glass tubes rises (see fig.~\ref{fig:tubexp}). On the other hand because of the rather homogeneous character of the gel and the one dimensional direction of flow (x-direction) the pressure gradient at a certain moment is constant and negative over the whole gel and is given by:
 \begin{equation}
@@ -108,6 +108,10 @@ B = -\frac{\eta H \ln\left(\frac{h(\infty)-h(t_2)}{h(\infty)-h(t_1)}\right)}{\rh
 \end{equation}
 
 Within the experimental accuracy the permeability coefficient, $B$, of acid casein gels did not change with time during the experiment.
+
+\section*{Bibliography}
+Dijk, H.J.M, van (1982). Doctoral thesis Agricultural University Wageningen, the Netherlands.\\
+Scheidegger, A.E. (1960). "The physics of flow through porous media". Chapter VI and VII, p. 112-193. Oxford University Press London.\\
 
 
 \end{document}
